# IRCChat

./: CMakeLists.txt
include/client/: client.hpp  client_window.hpp
include/server/: server.hpp
src/client/: client.cpp  client_window.cpp  main.cpp
src/server/: main.cpp  server.cpp
